some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ z-index: 1;
 }
 .map-area-wrapper {
 	margin-top: 5%;
-	margin-left: 20%;
+	margin-left: 21%;
 	position: center;
 	border: 1px;
 	overflow: visible;
